--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material/elevation": "^0.38.0",
     "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
     "body-parser": "^1.18.3",
@@ -12,6 +13,7 @@
     "nodemon": "^1.18.3",
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
+    "react-datepicker": "^1.5.0",
     "react-dom": "^16.4.1",
     "react-modal": "^3.5.1",
     "react-router-dom": "^4.3.1",
