--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongodb": "^2.2.36",
     "mongoose": "^5.2.7",
     "nodemon": "^1.18.3",
+    "normalize.css": "^8.0.0",
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.1",
     "react-datepicker": "^1.6.0",
