--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "@material/elevation": "^0.38.0",
+    "ajv": "^6.5.2",
+    "ajv-keywords": "^3.2.0",
     "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "express": "^4.16.3",
+    "jquery": "^3.3.1",
     "mongodb": "^2.2.36",
     "mongoose": "^5.2.7",
     "nodemon": "^1.18.3",
