--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "nodemon": "^1.18.3",
     "normalize.css": "^8.0.0",
     "react": "^16.4.2",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap": "^0.32.1",
-    "react-datepicker": "^1.6.0",
     "react-dom": "^16.4.2",
+    "react-infinite-calendar": "^2.3.1",
     "react-modal": "^3.5.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
