--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.2",
+    "react-flatpickr": "^3.6.4",
     "react-infinite-calendar": "^2.3.1",
     "react-modal": "^3.5.1",
     "react-router-dom": "^4.3.1",
